# genai-ml-platform-examples

./: .gitignore  AGENT.md  README.md  pyproject.toml
demo-apps/data-analysis-agent/: .dockerignore  .gitignore  README.md  agentcore_clickhouse_analyst.py  analyst_web_server.py  cleanup.py  clickhouse_config.py  clickhouse_notification_lambda.py  data_analyst_agent.py  deploy_clickhouse_gateway.py  fix_issue_lambda.py  requirements.txt  simple_mcp_agent.py  start_analyst_ui.py  start_mcp_server.py
demo-apps/data-analysis-agent/static/: analyst_ui.html  analyst_ui.js
infrastructure/automated-speech-recognition-async-pipeline-sagemaker-ai/: README.md
integration/genaiops-langfuse-on-aws/: .env.example  README.md
migration/: pyproject.toml  requirements.txt  setup.py
migration/SageMakerMigrationAdvisor/: .gitignore  README.md  README_CLI.md  STREAMLIT_README.md  advisor_agent_interactions.txt  advisor_config.py  logger_config.py  prompts.py  requirements.txt  requirements_cli.txt  run_sagemaker_migration_advisor.py  run_streamlit_app.py  run_streamlit_app_modified.py  sagemaker_migration_advisor.py  sagemaker_migration_advisor_cli.py  streamlit_agent_interactions.txt  streamlit_config.py  streamlit_requirements.txt  streamlit_sagemaker_advisor.py  test_advisor_setup.py  test_streamlit_setup.py
migration/SageMakerMigrationAdvisor/tools/: user_prompt.py
migration/sagemaker-mnist/: metadata.json  validation_report.json
migration/sagemaker-mnist/docs/: ARCHITECTURE_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_README.md  README.md
migration/sagemaker-mnist/inference/: inference.py
migration/sagemaker-mnist/infrastructure/cloudformation/: main.yaml
migration/sagemaker-mnist/infrastructure/iam/: endpoint_policy  execution_policy  model_registry_policy  trust_policy
migration/sagemaker-mnist/infrastructure/scripts/: cleanup.sh  cost_management.sh  deploy.sh  monitor.sh  pipeline.sh
migration/sagemaker-mnist/pipeline/: pipeline.py
migration/sagemaker-mnist/tests/unit/: test_data_loading.py  test_deploy_pipeline_training.py  test_evaluation_training.py  test_model_architecture.py  test_model_evaluation.py  test_model_save_training.py  test_pipeline_training.py  test_preprocessing_training.py  test_run_evaluation.sh_training.py  test_run_preprocessing.sh_training.py  test_torchscript_compatibility.py  test_train_training.py  test_training_loop.py
migration/sagemaker-mnist/training/: deploy_pipeline.py  evaluation.py  model_save.py  preprocessing.py  run_evaluation.sh  run_preprocessing.sh  train.py
migration/sagemigrator/: README.md  __init__.py  __main__.py  cli.py  config.py  migration_agent.py  pipeline_generator.py
migration/sagemigrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migration/sagemigrator/analysis/: __init__.py  code_analysis_engine.py  dependency_analyzer.py  pattern_detector.py  risk_assessor.py
migration/sagemigrator/compatibility/: __init__.py  error_prevention.py  sdk_v3_generator.py  torchscript_handler.py
migration/sagemigrator/deployment/: __init__.py  model_registry_integration.py
migration/sagemigrator/documentation/: __init__.py  documentation_generator.py
migration/sagemigrator/infrastructure/: __init__.py  cloudformation_generator.py  deployment_scripts_generator.py  iam_policy_generator.py
migration/sagemigrator/migration/: __init__.py  incremental_migration_manager.py
migration/sagemigrator/models/: __init__.py  analysis.py  artifacts.py  deployment.py  validation.py
migration/sagemigrator/utils/: __init__.py  cloudformation_utils.py  dependency_validator.py  exceptions.py  logging.py  role_validator.py  s3_arn_validator.py  s3_bucket_validator.py
migration/sagemigrator/validation/: __init__.py  integration_testing_generator.py  local_testing_generator.py  validation_component_factory.py
operations/sagemaker-mlflow-rag-pipeline-automation/: AGENT.md  README.md  hello.py  pyproject.toml
operations/sagemaker-mlflow-s3-vector-rag/: AGENT.md  README.md  amazon_10k_eval_dataset.jsonl  experiment-tracking-with-mlflow.ipynb  source_files_long_version.json  source_files_short_version.json  utils.py
operations/sagemaker-mlflow-s3-vector-rag-eval/: experiment-tracking-with-mlflow.ipynb
operations/sagemaker-mlflow-trace-evaluate-langgraph-agent/: .env_sample  AGENT.md  README.md  graph.py  mlflow_prompts.py  pyproject.toml  requirements.txt  sagemaker_mlflow_strands_agent.ipynb  utils.py
(+88 files in other folders)
